Update app route & support creation of new user (no encryption yet)

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_CONNECTION_STRING = "Add connection string here"
+MONGO_CONNECTION_STRING = "mongodb+srv://anthonygheinrichs:1eFl2OIzDowRPYHd@users.2nhh0sg.mongodb.net/"
