--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node application for practicing authentication",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "Anthony Heinrichs",
   "license": "ISC",
@@ -16,5 +17,8 @@
     "mongoose": "^8.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
