--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
     "express-session": "^1.17.3",
+    "helmet": "^7.1.0",
     "mongoose": "^8.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
