--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.4",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "mongoose": "^8.0.0",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
